# lambda-sidecar-service

./: .gitignore  LICENSE  Pulumi.dev.yaml  Pulumi.yaml  README.md  pyproject.toml  sidecar.py
infrastructure/: __init__.py  iam.py  lambda_.py  ssm.py
lambda/: handler.py
lambdas/lambda/: handler.py  package.sh
lambdas/sidecar/: lambda_wrapper.sh  package.sh  sidecar.py
scripts/: package_lambda.sh
